--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-	"name": "ardag-gateway",
+	"name": "@douganderson444/ardag-gateway",
 	"version": "0.0.1",
 	"main": "index.js",
 	"module": "index.js",
@@ -22,6 +22,7 @@
 		"svelte": "^3.44.0",
 		"svelte-check": "^2.7.1",
 		"svelte-preprocess": "^4.10.7",
+		"sveltejs-adapter-ipfs": "github:DougAnderson444/sveltejs-adapter-ipfs",
 		"tailwindcss": "^3.1.8",
 		"tslib": "^2.3.1",
 		"typescript": "^4.7.4",
