--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
 	"module": "index.js",
 	"scripts": {
 		"dev": "vite dev",
+		"dev:arlocal": "node ./startArlocal.js",
 		"build": "vite build",
 		"preview": "vite preview",
 		"check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
@@ -15,6 +16,7 @@
 	"devDependencies": {
 		"@sveltejs/adapter-auto": "next",
 		"@sveltejs/kit": "next",
+		"arlocal": "^1.1.58",
 		"autoprefixer": "^10.4.12",
 		"postcss": "^8.4.16",
 		"prettier": "^2.6.2",
@@ -31,9 +33,11 @@
 	"type": "module",
 	"dependencies": {
 		"@douganderson444/ardag": "^0.0.8",
-		"@douganderson444/ipld-car-txs": "github:DougAnderson444/ipld-car-txs",
-		"@douganderson444/svelte-component-gateway": "github:DougAnderson444/svelte-component-gateway",
+		"@douganderson444/ipld-car-txs": "file:../ipld-car-txs",
+		"@douganderson444/svelte-component-gateway": "file:../svelte-component-gateway",
 		"@douganderson444/svelte-fillvert": "^1.0.0",
-		"arweave": "^1.11.6"
+		"@peerpiper/web3-wallet-connector": "^0.1.3",
+		"arweave": "^1.11.6",
+		"web3-repl-deployable-kit": "file:../web3-repl-deployable-kit/package"
 	}
 }
