--- a/package.json
+++ b/package.json
@@ -1,13 +1,15 @@
 {
 	"name": "@douganderson444/ardag-gateway",
-	"version": "0.0.1",
+	"version": "0.0.14",
 	"main": "index.js",
 	"module": "index.js",
 	"scripts": {
 		"dev": "vite dev",
-		"dev:arlocal": "node ./startArlocal.js",
 		"build": "vite build",
+		"build:arweave": "esbuild ./node_modules/arweave/web/index.js --bundle --minify --sourcemap --format=esm --main-fields=browser,module,main  --outfile=./src/lib/modules/arweave.js ",
 		"preview": "vite preview",
+		"package": "svelte-kit sync && svelte-package ",
+		"_publish": "npm publish ./package --access public",
 		"check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
 		"check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
 		"lint": "prettier --plugin-search-dir . --check .",
@@ -16,15 +18,16 @@
 	"devDependencies": {
 		"@sveltejs/adapter-auto": "next",
 		"@sveltejs/kit": "next",
-		"arlocal": "^1.1.58",
+		"@sveltejs/package": "^1.0.0-next.5",
 		"autoprefixer": "^10.4.12",
+		"esbuild": "^0.15.10",
 		"postcss": "^8.4.16",
 		"prettier": "^2.6.2",
 		"prettier-plugin-svelte": "^2.7.0",
 		"svelte": "^3.44.0",
 		"svelte-check": "^2.7.1",
 		"svelte-preprocess": "^4.10.7",
-		"sveltejs-adapter-ipfs": "github:DougAnderson444/sveltejs-adapter-ipfs",
+		"sveltejs-adapter-ipfs": "^0.3.1",
 		"tailwindcss": "^3.1.8",
 		"tslib": "^2.3.1",
 		"typescript": "^4.7.4",
@@ -32,12 +35,9 @@
 	},
 	"type": "module",
 	"dependencies": {
-		"@douganderson444/ardag": "^0.0.8",
-		"@douganderson444/ipld-car-txs": "file:../ipld-car-txs",
-		"@douganderson444/svelte-component-gateway": "file:../svelte-component-gateway",
-		"@douganderson444/svelte-fillvert": "^1.0.0",
-		"@peerpiper/web3-wallet-connector": "^0.1.3",
-		"arweave": "^1.11.6",
-		"web3-repl-deployable-kit": "file:../web3-repl-deployable-kit/package"
+		"@douganderson444/ardag": "^0.0.13",
+		"@douganderson444/ipld-car-txs": "^0.0.12",
+		"@douganderson444/svelte-component-gateway": "^0.0.19",
+		"@peerpiper/web3-wallet-connector": "^0.1.4"
 	}
 }
