--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "@douganderson444/ardag-gateway",
-	"version": "0.0.14",
+	"version": "0.0.15",
 	"main": "index.js",
 	"module": "index.js",
 	"scripts": {
@@ -8,7 +8,8 @@
 		"build": "vite build",
 		"build:arweave": "esbuild ./node_modules/arweave/web/index.js --bundle --minify --sourcemap --format=esm --main-fields=browser,module,main  --outfile=./src/lib/modules/arweave.js ",
 		"preview": "vite preview",
-		"package": "svelte-kit sync && svelte-package ",
+		"package": "svelte-kit sync && svelte-package && npm run purge:package",
+		"purge:package": "node purge.js",
 		"_publish": "npm publish ./package --access public",
 		"check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
 		"check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
